testsuite/tests/grammar/invalid_lexers/invalid_null.lkt
from common import Example

lexer foo_lexer {
    Example <- null (Example)
}
